AC_INIT([wxMathPanel], [1.0.0])
AC_CONFIG_FILES([Makefile])

AC_PROG_CXX

AC_SUBST([CFLAGS], ['-O2 -fPIC'])
AC_SUBST([CXXFLAGS], [-Wall])
AC_SUBST([CPPFLAGS], [])
AC_SUBST([LIBS], [])

WX_CONFIG_CHECK([3.0.0], [], [AC_MSG_FAILURE([wxWidgets 3.0.0 or later not found])])
CPPFLAGS="$CPPFLAGS $WX_CPPFLAGS"
CXXFLAGS="$CXXFLAGS $WX_CXXFLAGS_ONLY"
CFLAGS="$CFLAGS $WX_CFLAGS_ONLY"
LIBS="$LIBS $WX_LIBS"

AC_OUTPUT